// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jobForm form renders a snapshot properly 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      className="form-group"
    >
      <input
        autoFocus={true}
        className="form-control input-lg"
        name="client"
        onChange={[Function]}
        placeholder="Client Name"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="description"
        onChange={[Function]}
        placeholder="Description"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="amountPaid"
        onChange={[Function]}
        placeholder="Amount Paid"
        required={true}
        type="number"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="paidTo"
      >
        Paid To
        <select
          className="form-control input-lg"
          id="paidTo"
          name="paidTo"
          onChange={[Function]}
          placeholder="Paid To"
          required={true}
          value="Gladtime Audio"
        >
          <option
            value="Gladtime Audio"
          >
            Gladtime Audio
          </option>
          <option
            value="Meghan"
          >
            Meghan
          </option>
          <option
            value="Tyler"
          >
            Tyler
          </option>
          <option
            value="Tyler/Meghan Separately"
          >
            Tyler/Meghan Separately
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="workedBy"
      >
        Worked By
        <select
          className="form-control input-lg"
          id="workedBy"
          name="workedBy"
          onChange={[Function]}
          required={true}
          value="Meghan"
        >
          <option
            value="Meghan"
          >
            Meghan
          </option>
          <option
            value="Tyler"
          >
            Tyler
          </option>
          <option
            value="Tyler and Meghan"
          >
            Tyler and Meghan
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="confirmation"
      >
        Confirmation
        <select
          className="form-control input-lg"
          id="confirmation"
          name="confirmation"
          onChange={[Function]}
          required={true}
          value="Confirmed"
        >
          <option
            value="Confirmed"
          >
            Confirmed
          </option>
          <option
            value="Pencilled In"
          >
            Pencilled In
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="hasPaid"
      >
        Has Paid
        <input
          className="form-check-input checkbox-lg"
          id="hasPaid"
          name="hasPaid"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="startDate"
      >
        Start Date
        <input
          className="form-control input-lg"
          id="startDate"
          name="startDate"
          onChange={[Function]}
          required={true}
          type="date"
          value=""
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="endDate"
      >
        End Date
        <input
          className="form-control input-lg"
          id="endDate"
          name="endDate"
          onChange={[Function]}
          required={true}
          type="date"
          value=""
        />
      </label>
    </div>
  </div>
</form>
`;

exports[`loginForm form renders a snapshot properly 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      className="form-group"
    >
      <input
        autoFocus={true}
        className="form-control input-lg"
        name="username"
        onChange={[Function]}
        placeholder="Enter username"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="password"
        onChange={[Function]}
        placeholder="Enter password"
        required={true}
        type="password"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="isPrivateDevice"
      >
        <input
          className="form-check-input checkbox-lg"
          id="isPrivateDevice"
          name="isPrivateDevice"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
        Keep me logged in. This is a private device.
      </label>
    </div>
  </div>
</form>
`;

exports[`oneTimeExpenseForm form renders a snapshot properly 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div
      className="form-group"
    >
      <input
        autoFocus={true}
        className="form-control input-lg"
        name="merchant"
        onChange={[Function]}
        placeholder="Bought From"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="description"
        onChange={[Function]}
        placeholder="Description"
        required={true}
        type="text"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <input
        className="form-control input-lg"
        name="amountSpent"
        onChange={[Function]}
        placeholder="Amount Spent"
        required={true}
        type="number"
        value=""
      />
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="date"
      >
        Date
        <input
          className="form-control input-lg"
          id="date"
          name="date"
          onChange={[Function]}
          required={true}
          type="date"
          value=""
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="paidBy"
      >
        Paid By
        <select
          className="form-control input-lg"
          id="paidBy"
          name="paidBy"
          onChange={[Function]}
          required={true}
          value="Gladtime Audio"
        >
          <option
            value="Gladtime Audio"
          >
            Gladtime Audio
          </option>
          <option
            value="Meghan"
          >
            Meghan
          </option>
          <option
            value="Tyler"
          >
            Tyler
          </option>
          <option
            value="Tyler/Meghan Separately"
          >
            Tyler/Meghan Separately
          </option>
        </select>
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="taxDeductible"
      >
        Tax Deductible
        <input
          className="form-check-input checkbox-lg"
          id="taxDeductible"
          name="taxDeductible"
          onChange={[Function]}
          type="checkbox"
          value={false}
        />
      </label>
    </div>
    <div
      className="form-group"
    >
      <label
        htmlFor="category"
      >
        Category
        <select
          className="form-control input-lg"
          id="category"
          name="category"
          onChange={[Function]}
          required={true}
          value="Business Equipment"
        >
          <option
            value="Business Equipment"
          >
            Business Equipment
          </option>
          <option
            value="Business Supplies"
          >
            Business Supplies
          </option>
          <option
            value="Gasoline"
          >
            Gasoline
          </option>
          <option
            value="Vehicle Maintenance"
          >
            Vehicle Maintenance
          </option>
          <option
            value="Travel Expense"
          >
            Travel Expense
          </option>
          <option
            value="Entertainment"
          >
            Entertainment
          </option>
          <option
            value="Food"
          >
            Food
          </option>
        </select>
      </label>
    </div>
  </div>
</form>
`;
